--- a/apps/ethanelliott.ca/src/styles.scss
+++ b/apps/ethanelliott.ca/src/styles.scss
@@ -1,22 +1,80 @@
-@use '@angular/material' as mat;
+/* 1. Use a more-intuitive box-sizing model */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 
-@include mat.elevation-classes();
-@include mat.app-background();
+/* 2. Remove default margin */
+* {
+  margin: 0;
+}
 
-html {
-  $light-theme: mat.define-theme(
-    (
-      color: (
-        theme-type: light,
-        primary: mat.$violet-palette,
-      ),
-      density: (
-        scale: -5,
-      ),
-    )
-  );
-  @include mat.all-component-themes($light-theme);
-  p {
-    color: mat.get-theme-color($light-theme, primary);
+/* 3. Enable keyword animations */
+@media (prefers-reduced-motion: no-preference) {
+  html {
+    interpolate-size: allow-keywords;
   }
+}
+
+body {
+  /* 4. Add accessible line-height */
+  line-height: 1.5;
+  /* 5. Improve text rendering */
+  -webkit-font-smoothing: antialiased;
+}
+
+/* 6. Improve media defaults */
+img,
+picture,
+video,
+canvas,
+svg {
+  display: block;
+  max-width: 100%;
+}
+
+/* 7. Inherit fonts for form controls */
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+/* 8. Avoid text overflows */
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
+}
+
+/* 9. Improve line wrapping */
+p {
+  text-wrap: pretty;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  text-wrap: balance;
+}
+
+/*
+  10. Create a root stacking context
+*/
+#root,
+#__next {
+  isolation: isolate;
+}
+
+* {
+  font-family: 'Montserrat', sans-serif;
+  font-optical-sizing: auto;
 }
